--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
-    "collectCoverageFrom" : [
+    "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
       "!<rootDir>/node_modules/",
       "!<rootDir>/path/to/dir/",
@@ -38,6 +38,7 @@
   "devDependencies": {
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.0",
-    "enzyme-to-json": "^3.3.4"
+    "enzyme-to-json": "^3.3.4",
+    "plop": "^2.1.0"
   }
 }
