--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.0.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5",
-    "styled-components": "^3.4.5"
+    "styled-components": "^3.4.5",
+    "typeface-lato": "^0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
